--- a/cloud-register/pom.xml
+++ b/cloud-register/pom.xml
@@ -2,15 +2,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <parent>
-        <artifactId>cloud-starter</artifactId>
+        <artifactId>cloud-starter-parent</artifactId>
         <groupId>org.nerve</groupId>
         <version>0.0.1</version>
         <relativePath>../cloud-starter-parent/pom.xml</relativePath>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>cloud-starter-web</artifactId>
+    <groupId>org.nerve</groupId>
+    <artifactId>cloud-register</artifactId>
+    <version>0.0.1</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
